<resources>
    <string name="app_name">LocalApparel</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="login">Log In</string>
    <string name="verifyPasswordField">Verify Password</string>
    <string name="createAccount">Create A New Account</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="myMessages">My Messages</string>
    <string name="uploadProfilePicture">Upload Profile Picture</string>
    <string name="brand">Brand:</string>
    <string name="city">City:</string>
    <string name="price">Price:</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="radius">Radius</string>
    <string name="checkS">S</string>
    <string name="checkM">M</string>
    <string name="checkL">L</string>
    <string name="checkXL">XL</string>
    <string name="size">Size</string>
    <string name="size2">Size</string>
    <string name="dash">-</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="conditionNew">new</string>
    <string name="conditionUsed">used</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="goToMarketPlace">Go To Marketplace</string>
    <string name="moneySymbol">$</string>
    <string name="reset">Reset</string>
    <string-array name="categories">
        <item>Jacket</item>
        <item>Coat</item>
        <item>Vest</item>
        <item>Long Sleeve</item>
        <item>Shirt</item>
        <item>Hoodie</item>
        <item>Polo</item>
        <item>Sweater</item>
        <item>Accessories</item>
        <item>Denim</item>
        <item>Shorts</item>
        <item>Trousers</item>
    </string-array>
    <string-array name="sizes">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
    <string name="sendMessageFromItemPage">Send Message</string>
    <string name="resetPassword">Forgot Password</string>
    <string name="logOut">Log Out</string>
</resources>
