<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"



    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/background1"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailField"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="162dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordField"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="232dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="313dp"
            android:onClick="logInPressed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textColor="@color/white"
            android:onClick="createNewAccount"/>

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textColor="@color/white"
            android:onClick="resetPassword"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>