<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp">

    <ImageView
        android:id="@+id/brand"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:src="@drawable/ic_shopping_basket_black_24dp"
        android:tint="@color/white" />

    <EditText
        android:id="@+id/brandInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/brand"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/brand"
        android:background="@color/editTextBG"
        android:hint="Brand"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:paddingTop="75dp">

        <ImageView
            android:id="@+id/imgView_passwordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:src="@drawable/ic_location_city_black_24dp"
            android:tint="@color/white" />


        <EditText
            android:id="@+id/cityInput"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgView_passwordIcon"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imgView_passwordIcon"
            android:background="@color/editTextBG"
            android:hint="City"
            android:paddingLeft="20dp"
            android:textSize="15sp"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="232dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="NotSibling" />

    </RelativeLayout>




    <TextView
        android:id="@+id/price"
        android:layout_width="66dp"
        android:layout_height="29dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lowRange"
        android:ems="10"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_alignBottom="@+id/price"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="150dp"
        android:layout_toRightOf="@+id/price"
        android:background="@color/editTextBG"
        android:textSize="15sp"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="232dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="NotSibling" />

    <!--<EditText
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/to"
        android:textColor="@color/white"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/to"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/highRange"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="330dp"
        android:layout_marginRight="120dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="150dp"
        android:background="@color/editTextBG"

        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:text="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="59dp"
        android:layout_height="29dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/radius"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/radiusInput"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="200dp"
        android:background="@color/editTextBG"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="88dp"
        android:layout_height="20dp"
        android:layout_marginLeft="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="300dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--android:entries="@array/category"-->
    <TextView
        android:id="@+id/size"
        android:layout_width="59dp"
        android:layout_height="29dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="250dp"
        android:onClick="onCheckboxClicked"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/checkS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="250dp"
        android:onClick="onCheckboxClicked"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/checkM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="250dp"
        android:onClick="onCheckboxClicked"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/checkL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxXL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="250dp"
        android:onClick="onCheckboxClicked"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/checkXL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category"
        android:layout_width="59dp"
        android:layout_height="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:layout_marginTop="300dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="59dp"
        android:layout_height="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:layout_marginTop="330dp"
        android:text="@string/condition"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxNew"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginLeft="87dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="330dp"
        android:onClick="onCheckboxClickedCondition"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/conditionNew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxUsed"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="330dp"

        android:scaleX="0.75"
        android:scaleY="0.75"
        android:text="@string/conditionUsed"
        android:onClick="onCheckboxClickedCondition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>